<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/regionName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/europe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/regionNameTextSize"
        android:fontFamily="@font/ja_jp"/>

    <TextView
        android:id="@+id/regionTime"
        android:layout_width="match_parent"
        android:layout_height="@dimen/clockHeight"
        android:fontFamily="@font/ja_jp"
        android:gravity="center"
        android:padding="10dp"
        android:text="00:00:00"
        android:textSize="@dimen/clockTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regionName" />

    <RadioGroup
        android:id="@+id/regionChangeRG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regionTime"
        android:gravity="center">

        <RadioButton
            android:id="@+id/rbEurope"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:fontFamily="@font/ja_jp"
            android:text="@string/europe"
            android:textSize="@dimen/regionChangeTextSize"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/rbNA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:fontFamily="@font/ja_jp"
            android:text="@string/na"
            android:textSize="@dimen/regionChangeTextSize"
            android:layout_margin="@dimen/regionChangeTextSize"/>

        <RadioButton
            android:id="@+id/rbAsia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:fontFamily="@font/ja_jp"
            android:text="@string/asia"
            android:textSize="@dimen/regionChangeTextSize" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>